--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="index">
             <div class="service-card">
                 <h2>Welcome to Silvana's Makeup Studio</h2>
-                <img src="Photos/studio.JPG" class="main-photo" alt="Makeup Studio">
+                <img src="Photos/studio.jpg" class="main-photo" alt="Makeup Studio">
                 <div class="service-text">
                     <p>Welcome to our studio, where we are dedicated to providing high-quality services with guaranteed products. Our team of skilled professionals ensures that every experience with us is exceptional, focusing on attention to detail and customer satisfaction. We use only the best products to deliver results you can trust, making every session a memorable and rewarding experience.</p>
                 </div>
@@ -60,7 +60,7 @@
                     <br><br><br>
                 </div>
 
-                <img src="Photos/final.JPG" class="editorial-photo" alt="Editorial Makeup">
+                <img src="Photos/final.jpg" class="editorial-photo" alt="Editorial Makeup">
                 <h2>Editorial Makeup</h2>
                 <div class="service-text">
                     <p>Get a flawless, camera-ready look with our editorial makeup service. Perfect for photoshoots, fashion events, or special occasions, we’ll enhance your natural beauty with a bold, artistic touch tailored to you.</p>
@@ -68,7 +68,7 @@
                     <br><br>
                 </div>
 
-                <img src="Photos/final3.JPG" class="fantasy-photo" alt="Fantasy Makeup">
+                <img src="Photos/final3.jpg" class="fantasy-photo" alt="Fantasy Makeup">
                 <h2>Fantasy Makeup</h2>
                 <div class="service-text">
                     <p>Transform into your wildest imagination with our fantasy makeup service. Whether it’s for Halloween or any themed event, we create stunning, creative looks that bring your character to life.</p>
@@ -76,7 +76,7 @@
                     <br><br>
                 </div>
 
-                <img src="Photos/final4.JPG" class="civil-photo" alt="Civil Bride Makeup">
+                <img src="Photos/final4.jpg" class="civil-photo" alt="Civil Bride Makeup">
                 <h2>Civil Bride Makeup</h2>
                 <div class="service-text">
                     <p>Achieve a natural and elegant look on your special day with our Civil Bride Makeup service. Perfect for a simple, yet sophisticated wedding ceremony, we enhance your beauty for an unforgettable celebration.</p>
